--- a/InsecurePayAndroid/app/src/main/res/layout/fragment_activity_history.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/fragment_activity_history.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:hint="Enter Account No"
+            android:hint="@string/tvActivityHistory_AccountNo"
             android:layout_width="183dp"
             android:layout_height="wrap_content"
             android:inputType="number"
@@ -27,7 +27,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="@string/btnSubmit"
         android:id="@+id/btnSubmit" />
 
     <ListView
