--- a/InsecurePayAndroid/app/src/main/res/layout/row.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/row.xml
@@ -19,14 +19,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Description"
+                android:text="@string/tvActivityHistory_Description"
                 android:id="@+id/tvActivityHistory_Description" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Date"
+                android:text="@string/tvActivityHistory_Date"
                 android:id="@+id/tvActivityHistory_Date" />
 
             <LinearLayout
@@ -37,16 +37,17 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="After amount"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="@string/tvActivityHistory_afterAmount"
                     android:id="@+id/tvActivityHistory_FinalAmount" />
 
                 <TextView
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="50dp"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Transaction Amount"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textAlignment="viewEnd"
+                    android:text="@string/tvActivityHistory_TransactionAmount"
                     android:id="@+id/tvActivityHistory_TransactionAmount" />
             </LinearLayout>
 
