--- a/InsecurePayAndroid/app/src/main/res/layout/fragment_activity_history.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/fragment_activity_history.xml
@@ -10,25 +10,32 @@
     tools:context=".fragments.ActivityHistoryFragment"
     android:weightSum="1">
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingBottom="10dp">
 
         <EditText
             android:hint="@string/tvActivityHistory_AccountNo"
-            android:layout_width="183dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/etActivityHistory_AccountNo" />
-    </android.support.design.widget.TextInputLayout>
+            android:id="@+id/etActivityHistory_AccountNo"
+            android:layout_weight="1"
+            android:textAlignment="center" />
 
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btnSubmit"
-        android:id="@+id/btnSubmit" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btnSubmit"
+            android:id="@+id/btnSubmit"
+            android:layout_weight="1" />
+    </LinearLayout>
 
     <ListView
         android:layout_width="wrap_content"
