Modify UI - Styles and colours #21

--- a/InsecurePayAndroid/app/src/main/res/layout/fragment_transfer.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/fragment_transfer.xml
@@ -15,7 +15,7 @@
 
         <EditText
             android:id="@+id/etCust_username"
-            android:layout_width="371dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/tvTransfer_custUsername"
             android:inputType="textAutoCorrect" />
