--- a/InsecurePayAndroid/app/src/main/res/layout/fragment_interest_calc.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/fragment_interest_calc.xml
@@ -117,7 +117,7 @@
             android:visibility="invisible" />
 
         <EditText
-            android:id="@+id/tvIntCalc_Date"
+            android:id="@+id/etIntCalc_Date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
