--- a/InsecurePayAndroid/app/src/main/res/layout/fragment_interest_calc.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/fragment_interest_calc.xml
@@ -128,7 +128,7 @@
             android:padding="5dp"
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </TableRow>
-
+<!--Displays credit score-->
     <TableRow
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -158,8 +158,44 @@
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
     </TableRow>
+    <!--Display interest-->
+    <TableRow
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tvIntCalc_Interest"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="19dp"
+            android:padding="5dp"
+            android:visibility="invisible"
+            android:text="@string/tvIntCalc_Interest" />
+
+        <TextView
+            android:id="@+id/tvIntCalc_FillInterest"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="50dp"
+            android:padding="5dp"
+            android:text="@string/tvIntCalc_FillInterest"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    </TableRow>
 
 
+
+
+
+
+    <!--Calculate Button-->
     <Button
         android:id="@+id/btnIntCalc_Calc"
         android:layout_width="wrap_content"
