--- a/InsecurePayAndroid/app/src/main/res/layout/fragment_account.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/fragment_account.xml
@@ -269,7 +269,9 @@
                 android:layout_marginStart="0dp"
                 android:inputType="number"
                 android:maxLines="1"
-                android:text="@string/tvAccount_addressZip" />
+                android:text="@string/tvAccount_addressZip"
+                android:maxLength="5"
+                android:minLines="1" />
         </TableRow>
 
         <TableRow
