--- a/InsecurePayAndroid/app/src/main/res/layout/fragment_account.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/fragment_account.xml
@@ -162,7 +162,9 @@
                 android:layout_marginStart="0dp"
                 android:inputType="phone"
                 android:maxLines="1"
-                android:text="@string/etAccount_phone_hint" />
+                android:text="@string/etAccount_phone_hint"
+                android:minLines="1"
+                android:maxLength="10" />
         </TableRow>
 
         <TableRow
