--- a/InsecurePayAndroid/app/src/main/res/layout/fragment_account.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/fragment_account.xml
@@ -5,7 +5,12 @@
     android:fillViewport="true"
     android:orientation="vertical"
     android:scrollIndicators="right"
-    tools:context=".fragments.AccountFragment">
+    tools:context=".fragments.AccountFragment"
+    android:background="@drawable/launcher"
+    android:backgroundTintMode="screen"
+    android:foreground="#15ffffff"
+    android:foregroundGravity="left|bottom"
+    android:visibility="visible">
 
     <TableLayout
         android:layout_width="match_parent"
@@ -15,7 +20,10 @@
 
         <TableRow
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:textAlignment="gravity"
+            android:transitionGroup="true"
+            android:touchscreenBlocksFocus="true">
 
             <TextView
                 android:id="@+id/tvAccount_name"
