--- a/InsecurePayAndroid/app/src/main/res/values/styles.xml
+++ b/InsecurePayAndroid/app/src/main/res/values/styles.xml
@@ -18,4 +18,9 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <!--Splash screen style config-->
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+    </style>
+
 </resources>
