--- a/InsecurePayAndroid/app/src/main/res/drawable/splash_screen.xml
+++ b/InsecurePayAndroid/app/src/main/res/drawable/splash_screen.xml
@@ -7,6 +7,6 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@mipmap/ic_cigital" />
+            android:src="@mipmap/ic_launcher" />
     </item>
 </layer-list>
