--- a/InsecurePayAndroid/app/src/main/res/layout/content_forgot_password.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/content_forgot_password.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.cigital.insecurepay.activity.ForgotPassword"
+    tools:context=".activity.ForgotPasswordActivity"
     tools:showIn="@layout/activity_forgot_password">
 
     <TextView
@@ -31,9 +31,9 @@
             android:layout_height="wrap_content"
             android:hint="@string/etForgotPass_AccountNumber"
             android:imeOptions="actionUnspecified"
+            android:inputType="text"
             android:maxLines="1"
-            android:singleLine="true"
-            android:inputType="text" />
+            android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -46,9 +46,9 @@
             android:layout_height="wrap_content"
             android:hint="@string/etForgotPass_ssnNumber"
             android:imeOptions="actionUnspecified"
+            android:inputType="text"
             android:maxLines="1"
-            android:singleLine="true"
-            android:inputType="text" />
+            android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -60,9 +60,9 @@
         android:layout_height="wrap_content"
         android:hint="@string/etForgotPass_username"
         android:imeOptions="actionUnspecified"
+        android:inputType="text"
         android:maxLines="1"
-        android:singleLine="true"
-        android:inputType="text" />
+        android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
