#89 Minor strings.xml cleanup

--- a/InsecurePayAndroid/app/src/main/res/layout/dialog_change_url.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/dialog_change_url.xml
@@ -17,7 +17,7 @@
             android:id="@+id/etUrlAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/url"
+            android:hint="@string/changeServer_url"
             android:imeOptions="actionUnspecified"
             android:inputType="textUri"
             android:maxLines="1"
@@ -32,7 +32,7 @@
             android:id="@+id/etUrlPath"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/path"
+            android:hint="@string/changeServer_path"
             android:imeOptions="actionUnspecified"
             android:inputType="textUri"
             android:maxLines="1"
