--- a/InsecurePayAndroid/app/src/main/res/layout/activity_login.xml
+++ b/InsecurePayAndroid/app/src/main/res/layout/activity_login.xml
@@ -8,22 +8,23 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:weightSum="1"
     tools:context=".activity.LoginActivity">
 
-    <!-- Login progress -->
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/ivLogo"
+        android:layout_width="190dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.55"
+        android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
         android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="23dp">
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -47,7 +48,8 @@
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp">
 
             <EditText
                 android:id="@+id/password"
